# investment_tools

./: .gitignore  README.md  app.js  index.html  styles.css
mf_tracker/: .gitignore  README.md  pyproject.toml
mf_tracker/frontend/: app.js  index.html  styles.css
mf_tracker/src/mf_tracker/: __init__.py  bundles.py  cli.py  comparison.py  domain.py  errors.py  ingestion.py  parsing.py  persistence.py  workbooks.py
mf_tracker/src/mf_tracker/amcs/: __init__.py  helios.py  oldbridge.py  ppfas.py  trust.py
mf_tracker/src/mf_tracker/web/: __init__.py  main.py
mf_tracker/tests/: test_comparison.py  test_golden_helios.py  test_golden_oldbridge.py  test_golden_ppfas.py  test_hardened_ingestion.py  test_helios_helpers.py  test_ingestion_delegation.py  test_metadata_options.py  test_oldbridge_helpers.py  test_parsing_dispatch.py  test_persistence.py  test_ppfas_helpers.py  test_workbooks.py
portfolio-manager/: .env.example  README.md
portfolio-manager/backend/: main.py  requirements.txt
portfolio-manager/backend/portfolio/: __init__.py  bundles.py  calculations.py  errors.py  file_loader.py  kite.py  models.py  persistence.py  price_provider.py  validation.py
portfolio-manager/frontend/: app.js  index.html  styles.css
