[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-tracker"
version = "0.1.0"
description = "AMC portfolio snapshot ingestion and comparison library"
requires-python = ">=3.12,<3.13"
dependencies = [
  "openpyxl>=3.1,<4",
  "polars>=1.20,<2",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
mf-tracker = "mf_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

