[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-tracker"
version = "0.1.0"
description = "AMC portfolio snapshot ingestion and comparison library"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1,<4",
  "polars>=1.20,<2",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
web = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.34,<1",
]

[project.scripts]
mf-tracker = "mf_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
